--- a/index.html
+++ b/index.html
@@ -45,9 +45,22 @@
                       <label for="date">Enter Date</label>
                       <input type="text" placeholder="1/10/2010" id="datetime" />
                     </li>
-                  <li class="list-group-item bg-dark">
-                    <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
-                  </li>
+                    <li class="list-group-item bg-dark">
+                      <label for="city">Enter a City</label>
+                      <input type="text" placeholder="benton" id="city">
+                    </li>
+                    <li class="list-group-item bg-dark">
+                      <label for="date">Enter a State</label>
+                      <input type="text" placeholder="ar" id="state" />
+                    </li>
+                    <li class="list-group-item bg-dark">
+                      <label for="date">Enter a Country</label>
+                      <input type="text" placeholder="us" id="country" />
+                    </li>
+                    <li class="list-group-item bg-dark">
+                      <label for="date">Enter a Shape</label>
+                      <input type="text" placeholder="circle" id="shape" />
+                    </li>
                   </ul>
               </form>  
             </div>
