--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
                       <input type="text" placeholder="benton" id="city">
                     </li>
                     <li class="list-group-item bg-dark">
-                      <label for="date">Enter a State</label>
+                      <label for="state">Enter a State</label>
                       <input type="text" placeholder="ar" id="state" />
                     </li>
                     <li class="list-group-item bg-dark">
-                      <label for="date">Enter a Country</label>
+                      <label for="country">Enter a Country</label>
                       <input type="text" placeholder="us" id="country" />
                     </li>
                     <li class="list-group-item bg-dark">
-                      <label for="date">Enter a Shape</label>
+                      <label for="shape">Enter a Shape</label>
                       <input type="text" placeholder="circle" id="shape" />
                     </li>
                   </ul>
